--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           </div>
         </div>
         <span class="text_12"
-          >EXPLORING&nbsp;A&nbsp;SUSTAINABLE&nbsp;FUTURE&nbsp;WITH&nbsp;PURE&nbsp;POWER</span
+          >EXPLORING&nbsp;A&nbsp;
+          <br/>SUSTAINABLE&nbsp;FUTURE
+          <br/>&nbsp;WITH&nbsp;PURE&nbsp;POWER</span
         >
         <div class="text-wrapper_5 flex-row">
           <span class="text_13">Empowering&nbsp;Innovations&nbsp;in&nbsp;the&nbsp;Industry</span>
@@ -51,11 +53,11 @@
             >Leading&nbsp;the&nbsp;Way&nbsp;to&nbsp;a&nbsp;Sustainable&nbsp;Future</span
           >
         </div>
-        <img
+        <!-- <img
           class="image_6"
           referrerpolicy="no-referrer"
           src="https://lanhu-oss.lanhuapp.com/SketchPng93b6aef78f5425c2591b50852d0282cc2d4a67a5bb8eea4a9bd486bb04c38ac8"
-        />
+        /> -->
       </div>
       <div class="block_3 flex-col">
         <div class="block_48 flex-row">
