feat: 签名墙功能实现

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./common.css" />
     <link rel="stylesheet" type="text/css" href="./index.css" />
+    <link rel="stylesheet/less" type="text/css" href="css/bottom.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
   </head>
   <body>
     <div class="page flex-col">
@@ -565,9 +567,10 @@
               </div>
             </div>
             <div class="box_18 flex-col">
-              <div class="text-wrapper_95 flex-col">
-                <span class="text_361">Sign&nbsp;Your&nbsp;Name</span>
-              </div>
+              <input type="text" class="text-input"/>
+            </div>
+            <div class="text-wrapper_95 flex-col">
+              <span class="text_361">Sign&nbsp;Your&nbsp;Name</span>
             </div>
             <div class="text-wrapper_29 flex-col">
               <span class="text_109">Confirm</span>
@@ -660,7 +663,7 @@
           </div>
         </div>
         <div class="text-wrapper_30 flex-col">
-          <span class="text_119">PURE&nbsp;POWER&nbsp;FOR&nbsp;ALL!</span>
+          <span class="text_119">PURE POWER <br> FOR ALL!</span>
         </div>
       </div>
       <div class="group_120 flex-col">
@@ -679,5 +682,6 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="js/bottom.js"></script>
   </body>
 </html>
