feat: 签名墙图片替换、卡片翻转功能实现

--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
           <div class="section_28 flex-col justify-between">
             <div class="text-group_80 flex-col justify-between">
               <span class="text_91"
-                >Pure&nbsp;Power&nbsp;Action&nbsp;Is&nbsp;In&nbsp;Full&nbsp;Swing</span
+                >Pure Power Action Is In <br> Full Swing</span
               >
               <span class="text_92"
-                >With&nbsp;your&nbsp;unwavering&nbsp;support,&nbsp;we’re&nbsp;amplifying&nbsp;green&nbsp;energy&nbsp;across&nbsp;the&nbsp;nation!&nbsp;PURE&nbsp;POWER&nbsp;ACTION&nbsp;will&nbsp;bring&nbsp;solar&nbsp;power&nbsp;to&nbsp;120&nbsp;Vape&nbsp;Stores,&nbsp;reaching&nbsp;over&nbsp;3,000&nbsp;stores&nbsp;and&nbsp;500,000&nbsp;clean-energy&nbsp;enthusiasts.&nbsp;Join&nbsp;us&nbsp;as&nbsp;we&nbsp;power&nbsp;a&nbsp;more&nbsp;sustainable&nbsp;future—one&nbsp;that&nbsp;brings&nbsp;green&nbsp;energy&nbsp;into&nbsp;every&nbsp;corner&nbsp;of&nbsp;daily&nbsp;life,&nbsp;until&nbsp;every&nbsp;place&nbsp;we&nbsp;call&nbsp;home&nbsp;glows&nbsp;in&nbsp;a&nbsp;refreshing&nbsp;shade&nbsp;of&nbsp;green.</span
+                >With your unwavering support, we’re amplifying green energy across the nation! PURE POWER ACTION will bring solar power to 120 Vape Stores, reaching over 3,000 stores and 500,000 clean-energy enthusiasts. Join us as we power a more sustainable future—one that brings green energy into every corner of daily life, until every place we call home glows in a refreshing shade of green.</span
               >
             </div>
             <div class="block_20 flex-row">
@@ -458,83 +458,57 @@
             >To&nbsp;create&nbsp;a&nbsp;greener,&nbsp;more&nbsp;sustainable&nbsp;future,&nbsp;VAPORESSO&nbsp;is&nbsp;leading&nbsp;the&nbsp;charge&nbsp;in&nbsp;promoting&nbsp;clean&nbsp;energy&nbsp;use.&nbsp;We&nbsp;invite&nbsp;everyone&nbsp;to&nbsp;join&nbsp;us&nbsp;in&nbsp;choosing&nbsp;clean&nbsp;energy&nbsp;for&nbsp;a&nbsp;sustainable&nbsp;tomorrow.&nbsp;Starting&nbsp;with&nbsp;ourselves&nbsp;as&nbsp;green&nbsp;ambassadors,&nbsp;let’s&nbsp;extend&nbsp;this&nbsp;commitment&nbsp;outward,&nbsp;making&nbsp;green&nbsp;living&nbsp;a&nbsp;part&nbsp;of&nbsp;everyday&nbsp;life&nbsp;and&nbsp;building&nbsp;a&nbsp;future&nbsp;where&nbsp;green&nbsp;is&nbsp;the&nbsp;new&nbsp;norm.</span
           >
         </div>
-        <div class="group_104 flex-col">
-          <img
-            class="image_61"
-            referrerpolicy="no-referrer"
-            src="https://lanhu-oss.lanhuapp.com/SketchPnge2a3a7ba022efe3e14e5a610db16cecb8e1c08a6600d6060402ebc85adddc28a"
-          />
-          <div class="block_62 flex-row justify-between">
-            <span class="text_349">PURE&nbsp;P</span>
+        <div class="card-container">
+          <div class="group_104 flex-col">
             <img
-              class="image_62"
+              class="image_61"
               referrerpolicy="no-referrer"
-              src="https://lanhu-oss.lanhuapp.com/SketchPng35740c7b8a86a832999c7565c4986c860793b1e6bdec4fdc0f9043e60501f888"
+              src="https://lanhu-oss.lanhuapp.com/SketchPnge2a3a7ba022efe3e14e5a610db16cecb8e1c08a6600d6060402ebc85adddc28a"
             />
-            <span class="text_350">WER&nbsp;FOR&nbsp;ALL</span>
+            <div class="block_62 flex-row justify-between">
+              <span class="text_349">PURE&nbsp;P</span>
+              <img
+                class="image_62"
+                referrerpolicy="no-referrer"
+                src="https://lanhu-oss.lanhuapp.com/SketchPng35740c7b8a86a832999c7565c4986c860793b1e6bdec4fdc0f9043e60501f888"
+              />
+              <span class="text_350">WER&nbsp;FOR&nbsp;ALL</span>
+            </div>
+            <span class="text_351">Clean&nbsp;Energy&nbsp;Use&nbsp;Initiative</span>
+            <img
+              class="image_63"
+              referrerpolicy="no-referrer"
+              src="https://lanhu-oss.lanhuapp.com/SketchPngb47af1d69c98eb48ffd55de7dfd0743e12d4fbba88fdfcb7c74c294c7afaf4d9"
+            />
           </div>
-          <span class="text_351">Clean&nbsp;Energy&nbsp;Use&nbsp;Initiative</span>
-          <img
-            class="image_63"
-            referrerpolicy="no-referrer"
-            src="https://lanhu-oss.lanhuapp.com/SketchPngb47af1d69c98eb48ffd55de7dfd0743e12d4fbba88fdfcb7c74c294c7afaf4d9"
-          />
-        </div>
-      </div>
-      <div class="block_22 flex-col">
-        <div class="box_91 flex-col">
-          <div class="group_105 flex-row justify-between">
-            <div class="box_92 flex-col"></div>
-            <div class="box_93 flex-col"></div>
-          </div>
-          <div class="group_106 flex-col"></div>
-          <div class="group_107 flex-col"></div>
-          <div class="group_108 flex-col"></div>
-          <img
-            class="image_64"
-            referrerpolicy="no-referrer"
-            src="https://lanhu-oss.lanhuapp.com/SketchPng123ac618a427fc967d61fcf60a9ae9b673793084d4b0f338806be8c4dbfaefc4"
-          />
-          <img
-            class="image_65"
-            referrerpolicy="no-referrer"
-            src="https://lanhu-oss.lanhuapp.com/SketchPng416361c7983bc4c12585e3782e3bd00e3a57a907c171e3646c3f08da78c73687"
-          />
-          <div class="text-wrapper_92">
-            <span class="text_352">Dear&nbsp;VAPORESSO&nbsp;Family,</span>
-            <span class="paragraph_34"><br /></span>
-            <span class="paragraph_35"><br /></span>
-            <span class="paragraph_36"
-              >As&nbsp;climate&nbsp;change&nbsp;accelerates,&nbsp;environmental&nbsp;issues&nbsp;have&nbsp;become&nbsp;a&nbsp;critical&nbsp;challenge&nbsp;that&nbsp;none&nbsp;of&nbsp;us&nbsp;can&nbsp;ignore.&nbsp;Now,&nbsp;more&nbsp;than&nbsp;ever,&nbsp;choosing&nbsp;clean&nbsp;energy&nbsp;is&nbsp;a&nbsp;meaningful&nbsp;step&nbsp;we&nbsp;can&nbsp;each&nbsp;take&nbsp;to&nbsp;protect&nbsp;our&nbsp;planet.<br /><br
-            /></span>
-            <span class="text_353"
-              >VAPORESSO&nbsp;is&nbsp;calling&nbsp;on&nbsp;everyone&nbsp;to&nbsp;make&nbsp;a&nbsp;positive&nbsp;impact&nbsp;by&nbsp;embracing&nbsp;clean&nbsp;energy,&nbsp;reducing&nbsp;emissions,&nbsp;and&nbsp;building&nbsp;a&nbsp;sustainable&nbsp;future&nbsp;together.</span
-            >
-            <span class="paragraph_37"
-              ><br /><br /><br /><br />Here&nbsp;are&nbsp;some&nbsp;ways&nbsp;to&nbsp;make&nbsp;a&nbsp;difference:<br /><br
-            /></span>
-            <span class="text_354">-&nbsp;Opt&nbsp;for&nbsp;green&nbsp;energy&nbsp;options</span>
-            <span class="text_355">&nbsp;like&nbsp;solar&nbsp;panels,&nbsp;and</span>
-            <span class="text_356">&nbsp;support&nbsp;low-carbon&nbsp;initiatives</span>
-            <span class="paragraph_38"
-              >&nbsp;to&nbsp;contribute&nbsp;to&nbsp;a&nbsp;cleaner&nbsp;world.<br /><br
-            /></span>
-            <span class="text_357"
-              >-&nbsp;Prioritize&nbsp;energy-efficient&nbsp;household&nbsp;appliances&nbsp;and&nbsp;devices</span
-            >
-            <span class="paragraph_39"
-              >&nbsp;like&nbsp;solar&nbsp;panels&nbsp;and&nbsp;wind&nbsp;turbines.<br /><br
-            /></span>
-            <span class="text_358"
-              >-&nbsp;Support&nbsp;the&nbsp;development&nbsp;of&nbsp;renewable&nbsp;energy</span
-            >
-            <span class="paragraph_40"
-              >&nbsp;by&nbsp;advocating&nbsp;for&nbsp;the&nbsp;installation&nbsp;of&nbsp;solar&nbsp;and&nbsp;wind&nbsp;power&nbsp;systems.<br /><br />-&nbsp;Whenever&nbsp;possible,</span
-            >
-            <span class="text_359">use&nbsp;public&nbsp;transportation</span>
-            <span class="paragraph_41"
-              >&nbsp;to&nbsp;conserve&nbsp;energy&nbsp;and&nbsp;reduce&nbsp;unnecessary&nbsp;power&nbsp;consumption.<br /><br /><br /><br />Together,&nbsp;we&nbsp;can&nbsp;make&nbsp;a&nbsp;difference.&nbsp;Let’s&nbsp;protect&nbsp;our&nbsp;planet&nbsp;and&nbsp;ensure&nbsp;a&nbsp;healthy,&nbsp;thriving&nbsp;world&nbsp;for&nbsp;future&nbsp;generations!</span
-            >
+          <div class="box_91 flex-col">
+            <div class="group_105 flex-row justify-between">
+            </div>
+            <img
+              class="image_64"
+              referrerpolicy="no-referrer"
+              src="https://lanhu-oss.lanhuapp.com/SketchPng123ac618a427fc967d61fcf60a9ae9b673793084d4b0f338806be8c4dbfaefc4"
+            />
+            <img
+              class="image_65"
+              referrerpolicy="no-referrer"
+              src="https://lanhu-oss.lanhuapp.com/SketchPng416361c7983bc4c12585e3782e3bd00e3a57a907c171e3646c3f08da78c73687"
+            />
+            <div class="text-wrapper_92">
+              <span class="text_352">Dear&nbsp;VAPORESSO&nbsp;Family,</span>
+              <div class="card_content">
+                As climate change accelerates, environmental issues have become a critical challenge that none of us can ignore. Now, more than ever, choosing clean energy is a meaningful step we can each take to protect our planet.
+                VAPORESSO is calling on everyone to make a positive impact by embracing clean energy, reducing emissions, and building a sustainable future together.
+                <br><br>
+                Here are some ways to make a difference: <br>
+                <span>- Opt for green energy options</span> like solar panels, and <span>support low-carbon initiatives</span> to contribute to a cleaner world.<br>
+                <span>- Prioritize energy-efficient household appliances and devices</span> like solar panels and wind turbines.<br>
+                <span>- Support the development of renewable energy</span> by advocating for the installation of solar and wind power systems.<br>
+                - Whenever possible, <span></span>use public transportation</span> to conserve energy and reduce unnecessary power consumption.
+                <br><br>
+                Together, we can make a difference. Let’s protect our planet and ensure a healthy, thriving world for future generations!
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -664,19 +638,6 @@
         </div>
         <div class="text-wrapper_30 flex-col">
           <span class="text_119">PURE POWER <br> FOR ALL!</span>
-        </div>
-      </div>
-      <div class="group_120 flex-col">
-        <div class="box_26 flex-col">
-          <div class="text-wrapper_31">
-            <span class="paragraph_14"
-              >Terms&nbsp;and&nbsp;Conditions:<br /><br /><br /><br />VAPORESSO&nbsp;is&nbsp;running&nbsp;Own&nbsp;the&nbsp;Spotlight&nbsp;Campaign&nbsp;for&nbsp;its&nbsp;customers.&nbsp;Before&nbsp;submitting&nbsp;an&nbsp;entry,&nbsp;please&nbsp;review&nbsp;the&nbsp;official&nbsp;contest&nbsp;rules&nbsp;located&nbsp;at</span
-            >
-            <span class="text_120">活动网址</span>
-            <span class="paragraph_15"
-              ><br /><br />Agreement&nbsp;to&nbsp;Official&nbsp;Rules:&nbsp;Participant’s&nbsp;participation&nbsp;in&nbsp;the&nbsp;Event&nbsp;constitutes&nbsp;Participant’s&nbsp;full&nbsp;and&nbsp;unconditional&nbsp;agreement&nbsp;to&nbsp;and&nbsp;acceptance&nbsp;of&nbsp;these&nbsp;Official&nbsp;Rules&nbsp;and&nbsp;the&nbsp;decisions&nbsp;of&nbsp;Sponsor,&nbsp;which&nbsp;are&nbsp;final&nbsp;and&nbsp;binding.&nbsp;<br /><br />By&nbsp;participating&nbsp;in&nbsp;the&nbsp;Event&nbsp;and&nbsp;submitting&nbsp;a&nbsp;Submission,&nbsp;Participant&nbsp;expressly&nbsp;agrees&nbsp;to&nbsp;participate&nbsp;in&nbsp;supporting&nbsp;marketing&nbsp;and&nbsp;other&nbsp;promotions&nbsp;and&nbsp;endorsements&nbsp;for&nbsp;Sponsor&nbsp;and&nbsp;its&nbsp;partners.&nbsp;<br /><br />Sponsor&nbsp;may&nbsp;display&nbsp;Submission&nbsp;on&nbsp;its&nbsp;website&nbsp;or&nbsp;on&nbsp;other&nbsp;promotional&nbsp;materials&nbsp;without&nbsp;attribution&nbsp;or&nbsp;any&nbsp;compensation&nbsp;owed&nbsp;to&nbsp;Participant.&nbsp;More&nbsp;details&nbsp;please&nbsp;check&nbsp;on&nbsp;OFFICIAL&nbsp;RULES.</span
-            >
-          </div>
         </div>
       </div>
     </div>
