--- a/index.html
+++ b/index.html
@@ -133,112 +133,47 @@
             >
           </div>
         </div>
-        <div class="block_51 flex-row">
-          <div class="image-wrapper_3 flex-col">
-            <img
-              class="image_7"
-              referrerpolicy="no-referrer"
-              src="https://lanhu-dds-backend.oss-cn-beijing.aliyuncs.com/merge_image/imgs/adefbb0e23a14cd69d50a761a1bb192e_mergeImage.png"
-            />
-          </div>
-        </div>
-        <div class="text-wrapper_80 flex-row">
-          <span class="text_32">01&nbsp;/&nbsp;05</span>
-        </div>
-        <div class="block_52 flex-row">
-          <div class="box_5 flex-col">
-            <span class="text_33"
-              >Compared&nbsp;to&nbsp;conventional&nbsp;e-cigarettes,&nbsp;every&nbsp;100&nbsp;ECO&nbsp;NANO&nbsp;SOLAR&nbsp;devices&nbsp;result&nbsp;in.</span
-            >
-            <div class="block_53 flex-row justify-between">
-              <div class="section_18 flex-col justify-between">
-                <img
-                  class="image_52"
-                  referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPng3d056fb8b63468ef4fbc1d03649369db556d1592f7213f43636d6bfcd872682a"
-                />
-                <div class="text-group_69 flex-col justify-between">
-                  <span class="text_305">60%</span>
-                  <span class="text_306">energy&nbsp;consumption&nbsp;savings</span>
-                </div>
+        <section class="img-slide-section">
+          <div class="img-slide-layout">
+            <div class="img-slide-wrapper">
+              <div class="img-box img-slide-item-01" style="top: 100px; left: 0;transform: scale(1); z-index: 5;">
+                <img src="image/slide-01@2x.png" loading="lazy" alt="">
               </div>
-              <img
-                class="image_9"
-                referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPng0fdb10eb660858d986a48ee41c6c0567dc8694ca90c2babeae8756252d2f1545"
-              />
-              <div class="section_19 flex-col justify-between">
-                <img
-                  class="image_53"
-                  referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPngbfb57471ce954557fabb1294f5b642243d5a1a08b09e250b6ae45931b51caa30"
-                />
-                <div class="text-group_70 flex-col justify-between">
-                  <span class="text_307">1000kg</span>
-                  <div class="text-wrapper_81">
-                    <span class="text_308">CO</span>
-                    <span class="text_309">₂</span>
-                    <span class="text_310">&nbsp;reduction</span>
-                  </div>
-                </div>
+              <div class="img-box img-slide-item-02" style="top: 117px; left: -1px; transform: scale(.97); z-index: 4;">
+                <img src="image/slide-01@2x.png" loading="lazy" alt="">
               </div>
-              <img
-                class="image_11"
-                referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPng0fdb10eb660858d986a48ee41c6c0567dc8694ca90c2babeae8756252d2f1545"
-              />
-              <div class="section_20 flex-col justify-between">
-                <img
-                  class="image_54"
-                  referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPngdfa5049763f4231225682cc21261c61cd064051b4270cf710593f563b76fa2ea"
-                />
-                <div class="text-group_71 flex-col justify-between">
-                  <span class="text_311">90%</span>
-                  <span class="text_312">total&nbsp;device&nbsp;recyclability</span>
-                </div>
+              <div class="img-box img-slide-item-03" style="top: 136px; left: -2px; transform: scale(.93); z-index: 3;">
+                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              </div>
+              <div class="img-box img-slide-item-04" style="top: 151px; left: -2px; transform: scale(.9); z-index: 2;">
+                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              </div>
+              <div class="img-box img-slide-item-05" style="top: 165px; left: -2px; transform: scale(.87); z-index: 1;">
+                <img src="image/slide-01@2x.png" loading="lazy" alt="">
+              </div>
+              <div class="text-wrapper_80 flex-row">
+                <span class="text_32"><span class="page-num">01</span> / 05</span>
               </div>
             </div>
           </div>
-        </div>
-        <div class="text-wrapper_82 flex-row">
-          <span class="text_42">05&nbsp;/&nbsp;05</span>
-        </div>
-        <div class="block_54 flex-row">
-          <div class="section_2 flex-col"></div>
-          <span class="text_43"
-            >VAPORESSO&nbsp;Shines&nbsp;a&nbsp;Light&nbsp;on&nbsp;a&nbsp;Sustainable&nbsp;Future</span
-          >
-        </div>
-        <div class="block_55 flex-row">
-          <div class="text-wrapper_14 flex-col">
-            <span class="text_44"
-              >VAPORESSO&nbsp;Shines&nbsp;a&nbsp;Light&nbsp;on&nbsp;a&nbsp;Sustainable&nbsp;Future</span
-            >
+        </section>
+        <section class="video-section">
+          <div class="video-layout">
+            <div class="video-wrapper">
+              <div class="video-box">
+                <video id="video-bg" preload loop muted src="image/video01.mp4" ></video>
+              </div>
+              <span class="text_43"
+                >VAPORESSO&nbsp;Shines&nbsp;a&nbsp;Light&nbsp;on&nbsp;a&nbsp;Sustainable&nbsp;Future</span
+              >
+            </div>
           </div>
-        </div>
+        </section>
+       
         <div class="text-wrapper_83 flex-row">
           <span class="text_45"
             >Pioneering&nbsp;innovative&nbsp;concepts&nbsp;in&nbsp;sustainable&nbsp;energy,&nbsp;VAPORESSO&nbsp;is&nbsp;leading&nbsp;the&nbsp;industry&nbsp;into&nbsp;a&nbsp;new&nbsp;era&nbsp;of&nbsp;eco-friendly&nbsp;efficiency&nbsp;through&nbsp;meaningful&nbsp;action.</span
           >
-        </div>
-        <div class="block_56 flex-col">
-          <div class="group_96 flex-col"></div>
-        </div>
-        <div class="block_57 flex-col"><div class="box_81 flex-col"></div></div>
-        <div class="block_58 flex-col"></div>
-        <div class="block_59 flex-col">
-          <div class="section_21 flex-col">
-            <div class="text-wrapper_84 flex-row justify-between">
-              <span class="text_313"
-                >Pioneering&nbsp;Application&nbsp;of&nbsp;Degradable&nbsp;Photovoltaic&nbsp;Technology</span
-              >
-              <span class="text_314"
-                >As&nbsp;an&nbsp;industry&nbsp;first,&nbsp;our&nbsp;OPV-PSC&nbsp;composite&nbsp;solar&nbsp;technology&nbsp;enables&nbsp;highly&nbsp;efficient&nbsp;conversion&nbsp;of&nbsp;sunlight&nbsp;into&nbsp;clean&nbsp;energy.&nbsp;This&nbsp;breakthrough&nbsp;achieves&nbsp;a&nbsp;26%&nbsp;increase&nbsp;in&nbsp;energy&nbsp;storage&nbsp;efficiency&nbsp;and&nbsp;an&nbsp;80%&nbsp;recyclability&nbsp;rate.&nbsp;Built&nbsp;with&nbsp;biodegradable&nbsp;and&nbsp;organic&nbsp;materials,&nbsp;this&nbsp;technology&nbsp;minimizes&nbsp;environmental&nbsp;impact,&nbsp;promoting&nbsp;a&nbsp;truly&nbsp;eco-friendly&nbsp;energy&nbsp;solution.</span
-              >
-            </div>
-            <div class="box_82 flex-col"></div>
-          </div>
         </div>
       </div>
       <div class="group_97 flex-col">
@@ -642,7 +577,10 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="index.js"></script>
     <script src="js/bottom.js"></script>
+    <script src="js/animate.js"></script>
   </body>
 </html>
