feat: 菜单滚动定位

--- a/index.html
+++ b/index.html
@@ -64,65 +64,67 @@
           src="https://lanhu-oss.lanhuapp.com/SketchPng93b6aef78f5425c2591b50852d0282cc2d4a67a5bb8eea4a9bd486bb04c38ac8"
         /> -->
       </div>
-      <div class="block_3 flex-col">
-        <div class="pure-menu-box flex-row">
+      <div class="block_3 flex-col" id="part_2">
+        <div class="pure-menu-box flex-row" id="pure-menu">
           <div class="block_4 flex-col" id="pure-menu-tag"></div>
-          <div class="text-wrapper_77 flex-col justify-between" id="pure-menu">
-            <span class="text_16" id="menu-text-13" onclick="scrollToSection('text_13')"
+          <div class="text-wrapper_77 flex-col justify-between">
+            <span class="text_16" id="menu-text_13" data-id="1" onclick="scrollToSection('text_13')"
               >Empowering Innovations in the Industry</span
             >
-            <span class="text_17" id="menu-text-14" onclick="scrollToSection('text_14')"
+            <span class="text_17" id="menu-text_14" data-id="2" onclick="scrollToSection('text_14')"
               >Inspiring Positive Change in Society</span
             >
-            <span class="text_18" id="menu-text-15" onclick="scrollToSection('text_15')"
+            <span class="text_18" id="menu-text_15" data-id="3" onclick="scrollToSection('text_15')"
               >Leading the Way to a Sustainable Future</span
             >
           </div>
         </div>
-        <div class="block_48 flex-row justify-center" id="text_13">
-          <span class="text_298">Empowering&nbsp;Innovations&nbsp;in&nbsp;the&nbsp;Industry</span>
-        </div>
-        <div class="block_49 flex-row" id="text_14">
-          <div class="group_95 flex-col">
-            <div class="text-wrapper_7">
-              <span class="text_20">Industry's&nbsp;First</span>
-              <span class="text_21"></span>
-            </div>
-            <div class="text-wrapper_8">
-              <span class="text_22">Solar&nbsp;Powered</span>
-              <span class="text_23"></span>
-            </div>
-            <span class="text_24">Open-System&nbsp;Vape</span>
-            <div class="box_3 flex-col">
-              <div class="section_1 flex-col">
-                <div class="text-wrapper_78 flex-row">
-                  <span class="text_299"
-                    >Clean&nbsp;energy&nbsp;usage&nbsp;revolutionize&nbsp;conventional&nbsp;power&nbsp;sources</span
-                  >
-                </div>
-                <div class="box_77 flex-row justify-between">
-                  <div class="section_17 flex-col justify-between">
-                    <div class="box_78 flex-col"></div>
-                    <div class="box_79 flex-col"></div>
-                    <div class="box_80 flex-col"></div>
+        <section id="text_13">
+          <div class="block_48 flex-row justify-center" >
+            <span class="text_298">Empowering&nbsp;Innovations&nbsp;in&nbsp;the&nbsp;Industry</span>
+          </div>
+          <div class="block_49 flex-row">
+            <div class="group_95 flex-col">
+              <div class="text-wrapper_7">
+                <span class="text_20">Industry's&nbsp;First</span>
+                <span class="text_21"></span>
+              </div>
+              <div class="text-wrapper_8">
+                <span class="text_22">Solar&nbsp;Powered</span>
+                <span class="text_23"></span>
+              </div>
+              <span class="text_24">Open-System&nbsp;Vape</span>
+              <div class="box_3 flex-col">
+                <div class="section_1 flex-col">
+                  <div class="text-wrapper_78 flex-row">
+                    <span class="text_299"
+                      >Clean&nbsp;energy&nbsp;usage&nbsp;revolutionize&nbsp;conventional&nbsp;power&nbsp;sources</span
+                    >
                   </div>
-                  <span class="text_300"
-                    >Fully&nbsp;recyclable&nbsp;structural&nbsp;design&nbsp;sets&nbsp;a&nbsp;new&nbsp;standard</span
-                  >
-                </div>
-                <div class="text-wrapper_79 flex-row">
-                  <span class="text_301"
-                    >Innovative&nbsp;materials&nbsp;redefine&nbsp;eco-friendly&nbsp;practices</span
-                  >
+                  <div class="box_77 flex-row justify-between">
+                    <div class="section_17 flex-col justify-between">
+                      <div class="box_78 flex-col"></div>
+                      <div class="box_79 flex-col"></div>
+                      <div class="box_80 flex-col"></div>
+                    </div>
+                    <span class="text_300"
+                      >Fully&nbsp;recyclable&nbsp;structural&nbsp;design&nbsp;sets&nbsp;a&nbsp;new&nbsp;standard</span
+                    >
+                  </div>
+                  <div class="text-wrapper_79 flex-row">
+                    <span class="text_301"
+                      >Innovative&nbsp;materials&nbsp;redefine&nbsp;eco-friendly&nbsp;practices</span
+                    >
+                  </div>
                 </div>
               </div>
+              <span class="text_28"
+                >The&nbsp;ECO&nbsp;NANO&nbsp;SOLAR&nbsp;is&nbsp;a&nbsp;concept&nbsp;product,&nbsp;not&nbsp;available&nbsp;for&nbsp;public&nbsp;market*</span
+              >
             </div>
-            <span class="text_28"
-              >The&nbsp;ECO&nbsp;NANO&nbsp;SOLAR&nbsp;is&nbsp;a&nbsp;concept&nbsp;product,&nbsp;not&nbsp;available&nbsp;for&nbsp;public&nbsp;market*</span
-            >
           </div>
-        </div>
-        <div class="block_50 flex-row justify-between" id="text_15">
+        </section>
+        <div id="text_14" class="block_50 flex-row justify-between">
           <span class="text_302">ECO&nbsp;NANO&nbsp;SOLAR</span>
           <div class="text-group_68 flex-col justify-between">
             <span class="text_303"
@@ -133,7 +135,7 @@
             >
           </div>
         </div>
-        <section class="img-slide-section">
+        <section class="img-slide-section" >
           <div class="img-slide-layout">
             <div class="img-slide-wrapper">
               <div class="img-box img-slide-item-01" style="top: 100px; left: 0;transform: scale(1); z-index: 5;">
@@ -157,7 +159,7 @@
             </div>
           </div>
         </section>
-        <section class="video-section">
+        <section class="video-section"  id="text_15">
           <div class="video-layout">
             <div class="video-wrapper">
               <div class="video-box">
@@ -170,7 +172,7 @@
           </div>
         </section>
        
-        <div class="text-wrapper_83 flex-row">
+        <div id="product-box-end" class="text-wrapper_83 flex-row">
           <span class="text_45"
             >Pioneering&nbsp;innovative&nbsp;concepts&nbsp;in&nbsp;sustainable&nbsp;energy,&nbsp;VAPORESSO&nbsp;is&nbsp;leading&nbsp;the&nbsp;industry&nbsp;into&nbsp;a&nbsp;new&nbsp;era&nbsp;of&nbsp;eco-friendly&nbsp;efficiency&nbsp;through&nbsp;meaningful&nbsp;action.</span
           >
