feat: 样式调整，图片替换

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img
               class="image_3"
               referrerpolicy="no-referrer"
-              src="https://lanhu-oss.lanhuapp.com/SketchPng7725ea1a09f5bce8a6d9374719c5abc8ccacda9c2c2f21f4931ecde4c41d9d86"
+              src="image/01-3@2x.svg"
             />
           </div>
           <div class="section_16 flex-row justify-between">
@@ -29,7 +29,7 @@
             <img
               class="image_31"
               referrerpolicy="no-referrer"
-              src="https://lanhu-oss.lanhuapp.com/SketchPng2be1c2cfed25ad553266e8eaf58173c52144640d473687274f6d7685b77a2e43"
+              src="image/01-2@2x.svg"
             />
           </div>
           <div class="text-wrapper_75 flex-row">
@@ -412,7 +412,7 @@
           <img
             class="image_19"
             referrerpolicy="no-referrer"
-            src="https://lanhu-oss.lanhuapp.com/SketchPng1da376f793de132e74c079ce2e97ab2d196c87073ac2f0b11d50fba95d7aac7c"
+            src="image/07@2x.webp"
           />
         </div>
       </div>
